# LLM-Cookbook

./: README.md  clean_unused_assets.py
00InterviewExperience/: README.md  任职要求.md  评测题.md  面经.md
01SoftwareSystemDesign/: README.md
01SoftwareSystemDesign/01Frontend_and_backend/Backend/Python/Basics/BuildYourPyPackage/demo_package/: README.md  demo.py  pyproject.toml
01SoftwareSystemDesign/01Frontend_and_backend/Backend/Python/Basics/BuildYourPyPackage/demo_package/src/demo_package.egg-info/: PKG-INFO  SOURCES.txt
01SoftwareSystemDesign/01Frontend_and_backend/Backend/Python/Basics/BuildYourPyPackage/demo_package/tests/: test_core.py
01SoftwareSystemDesign/02Microservices_and_DistributedSystems/: README.md
01SoftwareSystemDesign/03PerformanceOptimization/: README.md
01SoftwareSystemDesign/04DevOps/: README.md
02LLM_Foundation/: README.md
02LLM_Foundation/00 手搓系列/03 MiniMind/LearnMinimind/: draw_train_loss_curve.py  eval.py  main.py  pyproject.toml
02LLM_Foundation/00 手搓系列/03 MiniMind/LearnMinimind/model/: model_minimind.py
02LLM_Foundation/00 手搓系列/03 MiniMind/LearnMinimind/trainer/: train_pretrain.py  trainer_utils.py
02LLM_Foundation/02 FormulaicQuestions/: README.md  Structured Output.md  注意力机制.md
02LLM_Foundation/03 CommonModels/: README.md
03LLM_Training_and_Deployment/: README.md
04LLM_Application_Development/: README.md
04LLM_Application_Development/02AgentFramework/AgentFlowDemo/agent-service/: MCP_INTEGRATION.md  pyproject.toml  start_mcp_server.bat  start_mcp_server.sh
04LLM_Application_Development/02AgentFramework/AgentFlowDemo/agent-service/src/: __init__.py
04LLM_Application_Development/02AgentFramework/AgentFlowDemo/agent-service/src/agent/: mcp_agent.py  weather_agent.py
04LLM_Application_Development/02AgentFramework/AgentFlowDemo/agent-service/src/api/: main.py
04LLM_Application_Development/02AgentFramework/AgentFlowDemo/agent-service/src/tools/: mcp_http_client.py  mcp_manager.py  shttp_demo_server.py  weather.py
04LLM_Application_Development/02AgentFramework/AgentFlowDemo/agent-service/src/utils/: config.py
05OpenSource_Project_Analysis/: README.md
06Others/CleverCode/: README.md  (+1 more)
(+282 files in other folders)
