[project]
name = "learnminimind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]

[tool.ruff]
line-length = 88
target-version = "py310"
extend-select = ["I"]  # 启用 import 排序

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
ignore = []

[tool.ruff.lint.isort]
combine-as-imports = true

