[project]
name = "demo_package"         # ★ 与 src/demo_package 对应
version = "0.1.0"
description = "A simple math library."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name="Your Name", email="you@example.com" }
]
license = {file = "LICENSE"}

[project.urls]
"Homepage" = "https://github.com/yourname/demo_package"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
